# pulse-board

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  playwright.config.ts  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: feature-gap-slido.md  sample_ui.md
docs/adr/: 001-frontend-technology-stack.md  002-backend-technology-stack.md  003-browser-fingerprinting.md
docs/architecture/: overview.md
docs/code-style/: style-guide.md
docs/database/: migration-guide.md
docs/future-possibilities/: 01-trending-smart-sort.md  02-emoji-reactions.md  03-topic-expiration-cycles.md  04-analytics-dashboard.md  05-topic-search-filtering.md  06-accessibility-keyboard-nav.md  07-sentiment-clustering.md  08-duplicate-detection.md  09-activity-pulse-indicator.md  10-dark-light-theme.md  11-topic-bookmarking.md  README.md
docs/guides/: deployment.md  development-setup.md  getting-started.md
docs/operations/: docker.md
docs/prd/: 00-config.md  01-overview.md  02-phase-1-project-foundation.md  03-phase-2-topic-management.md  04-phase-3-voting-system.md  05-phase-4-realtime-websockets.md  06-phase-5-testing-quality.md  07-phase-6-documentation-devops.md
docs/testing/: test-conventions.md  testing-strategy.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
migrations/: env.py
src/pulse_board/: __init__.py  main.py
(+325 files in other folders)
